--- a/Videostore/Views/Home/Index.cshtml
+++ b/Videostore/Views/Home/Index.cshtml
@@ -1,8 +1,16 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model Videostore.Models.HomeViewModel
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@{ ViewData["Title"] = "Videostore"; }
+
+
+
+
+
+
+
+
+
+
+@section Scripts {
+    <script src="~/js/site.js"></script>
+} 
